[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Locks/Lock.gd" type="Script" id=1]
[ext_resource path="res://scenes/InfoAreas/InfoArea.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Lock" type="Node2D" groups=[
"LockGroup",
]]
script = ExtResource( 1 )

[node name="OpenerArea" type="Area2D" parent="."]

[node name="ClosedArea" type="StaticBody2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="InfoArea" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="OpenerArea" to="." method="_on_OpenerArea_body_entered"]
[connection signal="body_exited" from="OpenerArea" to="." method="_on_OpenerArea_body_exited"]
